# bgsimulator

./: pyproject.toml
bgsimulator/: context.py  main.py  minions.py
bgsimulator/minions/: mech.py  neutral.py  pirate.py
tests/: test_basic_battle.py  test_context_var.py  test_poisonous.py  test_taunt.py
