[tool.poetry]
name = "bg-simulator"
version = "0.1.0"
description = ""
authors = ["gtxx <xiongxiong1986@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "6.0.0"

[tool.poetry.dev-dependencies]
ipython = "^7.16.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
